--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+@font-face {
+  font-family: "Inter";
+  src: url(./vendor/fonts/Inter/Inter-Regular.ttf) format("truetype"),
+  url(./vendor/fonts/Inter/Inter-Medium.ttf) format("truetype"),
+  url(./vendor/fonts/Inter/Inter-SemiBold.ttf) format("truetype"),
+  url(./vendor/fonts/Inter/Inter-Bold.ttf) format("truetype")
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "SuisseIntl";
+  src: url(./vendor/fonts/SuisseIntl/SuisseIntl-SemiBold.ttf);
 }
