--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,3 +5,15 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding: 0 14px;
+  }
+}
