--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,15 +1,15 @@
 .about-project {
-  margin: 110px 70px;
+  padding: 110px 70px;
 }
 
 @media screen and (max-width: 768px) {
   .about-project  {
-    margin: 90px 50px;
+    padding: 90px 50px;
   }
 }
 
 @media screen and (max-width: 410px) {
   .about-project  {
-    margin: 70px 18px;
+    padding: 70px 18px;
   }
 }
