--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,16 +1,81 @@
 .button {
-  padding: 8px 20px;
-  background-color: #3ddc84;
+  padding: 0;
   border: 0px;
   border-radius: 3px;
   cursor: pointer;
-  color: #000;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 16px;
   text-align: center;
 }
 
 .button:hover {
   opacity: 0.9;
+}
+
+.button.button_type_login {
+  padding: 8px 20px;
+  font-size: 12px;
+  line-height: 16px;
+  background-color: #3ddc84;
+  color: #000;
+}
+
+.button.button_type_form {
+  text-align: center;
+  font-size: 14px;
+  line-height: 16.94px;
+  background-color: #4286f4;
+  color: #fff;
+  width: 396px;
+  height: 45px;
+  margin: calc(69px - 20px) 0 0 0;
+}
+
+.button.button_type_registration {
+  font-size: 12px;
+  line-height: 16px;
+  background-color: rgba(0, 0, 0, 0%);
+  color: #fff;
+}
+
+.button.button_type_search-form {
+  background-color: #4286f4;
+  width: 80px;
+  height: 34px;
+  border-radius: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button.button_type_more {
+  width: 320px;
+  height: 36px;
+  background-color: rgba(0, 0, 0, 0%);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14.52px;
+  color: #fff;
+  border: 1px solid #424242;
+}
+
+.button.button_type_account {
+  font-size: 14px;
+  line-height: 16px;
+  background-color: rgba(0, 0, 0, 0%);
+  color: #fff;
+}
+
+.button.button_type_link-films {
+  font-size: 13px;
+  line-height: 18px;
+  background-color: rgba(0, 0, 0, 0%);
+  color: #fff;
+}
+
+.button.button_type_link-films-saved {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  background-color: rgba(0, 0, 0, 0%);
+  color: #fff;
 }
