--- a/src/components/ShortFilms/ShortFilms.css
+++ b/src/components/ShortFilms/ShortFilms.css
@@ -6,3 +6,10 @@
   height: 40px;
   align-items: center;
 }
+
+@media screen and (max-width: 670px) {
+  .short-films {
+    border: none;
+    margin: 46px 0 0;
+  }
+}
