add: search form

--- a/src/components/SearchForm/SearchFormContainer/SearchFormContainer.css
+++ b/src/components/SearchForm/SearchFormContainer/SearchFormContainer.css
@@ -4,3 +4,11 @@
   width: 100%;
   padding: 0 19px 0 24px;
 }
+
+@media screen and (max-width: 670px) {
+  .search-form__container {
+    align-items: center;
+    height: 72px;
+    background-color: #222;
+  }
+}
