--- a/src/components/SearchFilms/SearchFilms.css
+++ b/src/components/SearchFilms/SearchFilms.css
@@ -2,3 +2,9 @@
   padding-bottom: 69px;
   border-bottom: 1px solid #424242;
 }
+
+@media screen and (max-width: 670px) {
+  .search-films {
+    padding-bottom: 45px;
+  }
+}
