--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -8,3 +8,11 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 670px) {
+  .search-form {
+    height: auto;
+    background-color: rgba(0,0,0,0%);
+    flex-direction: column;
+  }
+}
