--- a/src/components/SearchForm/SearchFormInputField/SearchFormInputField.css
+++ b/src/components/SearchForm/SearchFormInputField/SearchFormInputField.css
@@ -15,3 +15,14 @@
   font-size: 18px;
   line-height: 20px;
 }
+
+@media screen and (max-width: 670px) {
+  .search-form__input-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  .search-form__input-field::placeholder {
+    font-size: 14px;
+  }
+}
