--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -5,3 +5,9 @@
   align-items: center;
   padding: 0 0 0 44px;
 }
+
+@media screen and (max-width: 768px) {
+  .profile {
+    visibility: hidden;
+  }
+}
