--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,6 +1,4 @@
 .register {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
