--- a/src/components/MoviesCard/MoviesCardDuration/MoviesCardDuration.css
+++ b/src/components/MoviesCard/MoviesCardDuration/MoviesCardDuration.css
@@ -6,3 +6,10 @@
   padding: 0;
   margin: 13px 0 0;
 }
+
+@media screen and (max-width: 600px) {
+  .movies-card__duration {
+    width: 228px;
+    margin: 8px 0 0;
+  }
+}
