--- a/src/components/MoviesCard/MoviesCardHeader/MoviesCardHeader.css
+++ b/src/components/MoviesCard/MoviesCardHeader/MoviesCardHeader.css
@@ -7,3 +7,11 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 600px) {
+  .movies-card__text {
+    font-size: 12px;
+    line-height: 15px;
+    width: 228px;
+  }
+}
