--- a/src/components/MoviesCard/MoviesCardImage/MoviesCardImage.css
+++ b/src/components/MoviesCard/MoviesCardImage/MoviesCardImage.css
@@ -4,3 +4,12 @@
   object-fit: cover;
   margin: 6px 6px 6px 0;
 }
+
+@media screen and (max-width: 600px) {
+  .movies-card__image {
+    width: 100%;
+    height: 168px;
+    object-fit: cover;
+    margin: 0;
+  }
+}
