--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,8 +1,8 @@
 .logo {
-  width: 38px;
+  min-width: 38px;
   height: 38px;
-  background-image: url(../../images/logo.png);
-  background-size: contain;
+  background-image: url(../../images/logo.svg);
+  background-size: cover;
   background-repeat: no-repeat;
   cursor: pointer;
 }
