--- a/src/components/SearchForm/SearchFormContainer/SearchFormContainer.css
+++ b/src/components/SearchForm/SearchFormContainer/SearchFormContainer.css
@@ -7,6 +7,7 @@
 
 @media screen and (max-width: 670px) {
   .search-form__container {
+    border-radius: 9px;
     align-items: center;
     height: 72px;
     background-color: #222;
