--- a/src/components/Portfolio/PortfolioListElement/PortfolioListElement.css
+++ b/src/components/Portfolio/PortfolioListElement/PortfolioListElement.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  text-decoration: none;
 }
 
 .portfolio__list-element:not(:last-child) {
