--- a/src/components/MoviesCard/MoviesCardDislike/MoviesCardDislike.css
+++ b/src/components/MoviesCard/MoviesCardDislike/MoviesCardDislike.css
@@ -6,6 +6,13 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-top: 30px;
+  background-color: rgba(0,0,0,0%);
+  border: none;
+  cursor: pointer;
+}
+
+.movies-card__dislike:hover { 
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 600px) {
