--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -2,7 +2,7 @@
   min-width: 38px;
   height: 38px;
   background-image: url(../../images/logo.svg);
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   cursor: pointer;
 }
