fix, add: settings profile, connection backend

--- a/src/components/SettingsProfile/SettingsProfile.css
+++ b/src/components/SettingsProfile/SettingsProfile.css
@@ -5,3 +5,58 @@
   flex-direction: column;
   box-sizing: border-box;
 }
+
+.settings-profile__input-field {
+  padding: 0;
+  margin: 0;
+  text-align: right;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  color: #fff;
+  border: none;
+  background-color: rgba(0,0,0,0%);
+  outline: none;
+}
+
+.settings-profile__label {
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 13px;
+  color: #fff;
+}
+
+.settings-profile__input {
+  padding: 16px 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.settings-profile__input:first-child {
+  padding: 0 0 16px;
+  border-bottom: 1px solid #424242;
+}
+
+.settings-profile__form {
+  width: 410px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+}
+
+.settings-profile__title {
+  padding: 0;
+  margin: 0 0 123px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #fff;
+  text-align: center;
+} 
+
+@media screen and (max-width: 415px) {
+  .settings-profile__form {
+    width: 260px;
+  }
+}
