--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -2,3 +2,80 @@
   display: flex;
   justify-content: center;
 }
+
+.register__fieldset {
+  height: 100vh;
+  width: 396px;
+  border: 0;
+  padding: 70px 0;
+  box-sizing: border-box;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.register__fieldset-title {
+  margin: 40px 0;
+  padding: 0;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #fff;
+}
+
+.register__label {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #8b8b8b;
+  margin: 0 0 10px 0;
+}
+
+.register__input-field {
+  padding: 0;
+  margin: 10px 0 20px;
+  background-color: #2f2f2f;
+  border: 0;
+  width: 100%;
+  height: 46px;
+  border-radius: 8px;
+  text-indent: 15px;
+  color: #fff;
+  outline: none;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.register__subtext {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #8b8b8b;
+  text-align: center  ;
+}
+
+
+@media screen and (max-width: 950px){
+  .register__fieldset {
+    height: 100vmax;
+  }
+}
+
+@media screen and (max-width: 395px){
+  .register__fieldset {
+    align-items: center;
+    padding: 56px 0 30px;
+  }
+
+  .register__input-field {
+    width: 260px;
+    display: flex;
+  }
+
+  .register__subtext {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
