--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -56,6 +56,20 @@
   text-align: center  ;
 }
 
+.login__input {
+  position: relative;
+}
+
+.login__error {
+  display: block;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ee3465;
+  position: absolute;
+  bottom: -5px;
+}
+
 
 @media screen and (max-width: 950px){
   .login__fieldset {
