--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -56,6 +56,19 @@
   text-align: center  ;
 }
 
+.register__input {
+  position: relative;
+}
+
+.register__error {
+  display: block;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ee3465;
+  position: absolute;
+  bottom: -5px;
+}
 
 @media screen and (max-width: 950px){
   .register__fieldset {
