--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -52,7 +52,7 @@
   position: relative;
 }
 
-.search-form__error {
+.search-form__error_active {
   display: block;
   font-weight: 400;
   font-size: 10px;
