--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,6 +3,30 @@
   gap: 16px;
 }
 
+.navigation__link {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 18px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.navigation__link_active {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.navigation__link:hover {
+  opacity: 0.7;
+}
+
+.navigation__link_active:hover {
+  opacity: 0.7;
+}
+
 @media screen and (max-width: 768px) {
   .navigation {
     display: none;
