--- a/src/components/SettingsProfile/SettingsProfile.css
+++ b/src/components/SettingsProfile/SettingsProfile.css
@@ -28,6 +28,7 @@
 
 .settings-profile__input {
   padding: 16px 0 0;
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
@@ -54,6 +55,17 @@
   color: #fff;
   text-align: center;
 } 
+
+.settings-profile__error {
+  display: block;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ee3465;
+  position: absolute;
+  bottom: -15px;
+  right: 0;
+}
 
 @media screen and (max-width: 415px) {
   .settings-profile__form {
