--- a/src/components/InfoTooltip/InfoTooltip.css
+++ b/src/components/InfoTooltip/InfoTooltip.css
@@ -33,7 +33,7 @@
   line-height: 29px;
   text-align: center;
   width: 358px;
-  margin: 0 36px 60px;
+  margin: 60px 36px;
 }
 
 .tooltip__container {
